<resources>
    <string name="app_name">Worefa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab">Home</string>
    <string name="companys_tab">Company</string>
    <string name="settings_tab">Settings</string>
    <string name="about_tab">About</string>
    <string name="shr_hint_username">Full Name</string>
    <string name="shr_hint_password">password</string>
    <string name="password_fireld_string">Password</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_button_next">Next</string>
    <string name="a">A</string>
    <string name="textview">TextView</string>
    <string name="this_is_a_very_long_text_and_we_need_to_show_3_dots">This is very long</string>
</resources>
