...
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
>
    <com.ogaclejapan.smarttablayout.SmartTabLayout
            android:id="@+id/viewpagertab"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:stl_indicatorAlwaysInCenter="false"
            app:stl_indicatorWithoutPadding="false"
            app:stl_indicatorInFront="false"
            app:stl_indicatorInterpolation="smart"
...

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>-->
    <androidx.viewpager.widget.ViewPager

            android:id="@+id/main_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/viewpagertab" app:layout_constraintStart_toStartOf="parent"
...
