...
    <variable name="appointment" type="com.khhhm.worefa.data.entitys.Appointment"/>
    <import type="com.khhhm.worefa.data.entitys.Company"/>
    <variable name="company" type="com.khhhm.worefa.data.entitys.Company"/>
</data>
    <RelativeLayout

            android:id="@+id/layoutas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{click}"
            android:onLongClick="@{onLongClick}"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp">
...
